<resources>
    <string name="app_name">Delivery Bagual</string>
    <string name="adicionar">Adicionar</string>
    <string name="adicionaritens">Adicionar itens</string>
    <string name="adicioneitens">Adicione itens ao pedido</string>
    <string name="pedidos">Pedidos</string>
    <string name="confirmacaoDoPedido">Confirmação do pedido</string>
    <string name="novopedido">Novo pedido</string>
    <string name="desejacancelarpeiddo">Deseja cancelar o pedido?</string>
    <string name="cancelarpedido">Cancelar o pedido</string>
    <string name="listavazia">Nenhum pedido em andamento</string>
    <string name="carrinho">Itens adicionados</string>
    <string name="vercarrinho">Ver carrinho</string>
    <string name="selecioneDataDeEntrega">Selecione a data de entrega</string>
    <string name="entregaImediata">Entrega imediata</string>
    <string name="sucessoPedido">Seu pedido foi realizado com sucesso!!</string>
    <string name="verPedidos">Ver pedidos realizados</string>
    <string name="confirmacao">Confirmação</string>
    <string name="proximo">Próximo</string>
    <string name="continuar">Continuar</string>
    <string name="bovina">Bovina</string>
    <string name="suina">Suína</string>
    <string name="frango">Frango</string>
    <string name="aperitivos">Aperitivos</string>
    <string name="maminha">Maminha</string>
    <string name="picanha">Picanha</string>
    <string name="costela">Costela</string>
    <string name="chuleta">Ripa da chuleta</string>
    <string name="pernil">Pernil</string>
    <string name="lombo">Lombo</string>
    <string name="linguica">Linguiça</string>
    <string name="bisteca">Bisteca</string>
    <string name="peito">Peito</string>
    <string name="coxa">Coxa</string>
    <string name="sobrecoxa">Sobrecoxa</string>
    <string name="coracao">Coraçãozinho</string>
    <string name="polenta">Peito</string>
    <string name="paoalho">Pão de alho</string>
    <string name="xixo">Xixo</string>
    <string name="maionese">Salada de maionese</string>
    <string name="espetopequeno">Espeto pequeno (700g)</string>
    <string name="espetogrande">Espeto grande (1,2kg)</string>
    <string name="porcaopequena">Porção pequena</string>
    <string name="porcaogrande">Porção grande</string>
    <string name="churrascariasdisponiveis">Churrascarias disponíveis</string>
    <string name="reviseseupedido">Revise seu pedido</string>
    <string name="confirmar">Confirmar</string>
    <string name="informacoesdopedido">Informações do pedido</string>
</resources>
